cmake_minimum_required(VERSION 3.16)

project(Stack)

set(CMAKE_CXX_STANDARD 17)

add_executable(stack_array Stack_Array.cpp)

add_executable(stack_array_oop Stack_Array_OOP.cpp)

add_executable(balancedparentheses BalancedParentheses.cpp)

add_executable(InfixToPostfix InfixToPostfix.cpp)

add_executable(PostfixEvaluation PostfixEvaluation.cpp)

